--- a/about/index.html
+++ b/about/index.html
@@ -111,10 +111,10 @@
   </div>
 </header>
 
-    <div id="about-banner" style="background-image: url(http://file.muyutech.com/about.jpg)"></div>
+    <div id="about-banner" style="background-image: url(http://file.muyutech.com/abouts.jpg)"></div>
 <div class="author">
   <div class="head">
-    <img src="https://avatars3.githubusercontent.com/u/16443628?v=3&s=460" />
+    <img src="https://avatars3.githubusercontent.com/u/s16443628?v=3&s=460" />
   </div>
   <h3>fatehome</h3>
   <p class="discription">The end is always near.</p>
